updates prompt eng notebook link variable

--- a/genai_cookbook/nbs/fm_api_mlflow_prompt_eng.ipynb
+++ b/genai_cookbook/nbs/fm_api_mlflow_prompt_eng.ipynb
@@ -4,6 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "(nbs:fm_api_mlflow_prompt_eng)=\n",
     "# Using the MLflow Prompt Engineering UI\n",
     "\n",
     "This notebook will show how to use the MLflow Prompt Engineering UI with the Databricks Foundation Model API. The [prompt engineering UI](https://mlflow.org/docs/latest/llms/prompt-engineering/index.html) lets you combine different models, prompts, and parameter configurations and works seamlessly with the Foundation Model API in Databricks.\n",
