updates vector search cleanup section

--- a/genai_cookbook/nbs/vector_search_fm_api.ipynb
+++ b/genai_cookbook/nbs/vector_search_fm_api.ipynb
@@ -768,7 +768,7 @@
    },
    "source": [
     "## Cleanup\n",
-    "The code snippet below will delete the VS index and source table, along with the catalog and schema if they are empty. Uncomment and run this cell if you are finished with the example and want to delete the generated artifacts.\n",
+    "The code snippet below will delete the VS index and source table, along with the catalog and schema if they are empty. Uncomment and run these cells if you are finished with the example and want to delete the generated artifacts.\n",
     "\n",
     "Please carefully inspect the objects you used in this guide to ensure you are not deleting any shared resources or anything else you do not want deleted."
    ]
@@ -790,12 +790,12 @@
    },
    "outputs": [],
    "source": [
-    "# # delete index\n",
-    "vsc.delete_index(endpoint_name=VS_ENDPOINT_NAME,\n",
-    "                  index_name=VS_INDEX_FULLNAME)\n",
+    "## delete index\n",
+    "# vsc.delete_index(endpoint_name=VS_ENDPOINT_NAME,\n",
+    "#                   index_name=VS_INDEX_FULLNAME)\n",
     "\n",
     "# delete schema and catalog\n",
-    "spark.sql(f\"DROP CATALOG IF EXISTS {CATALOG} CASCADE\")"
+    "# spark.sql(f\"DROP CATALOG IF EXISTS {CATALOG} CASCADE\")"
    ]
   },
   {
