cleans up output in prov throughput example

--- a/genai_cookbook/nbs/fast_classification_provisioned.ipynb
+++ b/genai_cookbook/nbs/fast_classification_provisioned.ipynb
@@ -261,28 +261,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Starting data generation...\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\rGenerating Data: 100%|██████████| 16000/16000 [09:33<00:00, 27.92it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Starting data generation...\n",
+      "\rGenerating Data: 100%|██████████| 16000/16000 [09:33<00:00, 27.92it/s]\n",
       "Median latency (s): 2.189871907234192\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n"
      ]
     }
    ],
