updates links and see also section

--- a/genai_cookbook/nbs/serve_marketplace.ipynb
+++ b/genai_cookbook/nbs/serve_marketplace.ipynb
@@ -20,7 +20,7 @@
     "\n",
     "This will lead you to the Databricks Marketplace. From here, you can see all the available models by filtering for \"Model\" under the \"Product\" dropdown menu. To find the OLMo models, search for \"OLMo\" in the search bar.\n",
     "\n",
-    "```{image} ../images/playground/2_marketplace.png\n",
+    "```{image} ../images/serve_marketplace/2_marketplace.png\n",
     ":alt: Search for the OLMo models with the search bar\n",
     ":width: 800px\n",
     ":align: center\n",
@@ -28,7 +28,7 @@
     "\n",
     "Click on the OLMo model result. The add the models to your workspace, all you need to do is click \"Get instant access\" and specify the name of the catalog you want created to house the models.\n",
     "\n",
-    "```{image} ../images/playground/3_marketplace.png\n",
+    "```{image} ../images/serve_marketplace/3_marketplace.png\n",
     ":alt: Click \"Get instant access\" to add the OLMo model to your workspace\n",
     ":width: 800px\n",
     ":align: center\n",
@@ -41,7 +41,7 @@
     "\n",
     "You can see these models by navigating to the catalog explorer and finding the catalog in which you specified the models should be added.\n",
     "\n",
-    "```{image} ../images/playground/4_marketplace.png\n",
+    "```{image} ../images/serve_marketplace/4_marketplace.png\n",
     ":alt: Navigate to the catalog explorer to view the models you obtained from the marketplace\n",
     ":width: 800px\n",
     ":align: center\n",
@@ -53,7 +53,7 @@
     "\n",
     "We will deploy the OLMo 7B model. Navigate to the OLMo-7b model in the catalog explorer and click \"Serve this model.\"\n",
     "\n",
-    "```{image} ../images/playground/5_marketplace.png\n",
+    "```{image} ../images/serve_marketplace/5_marketplace.png\n",
     ":alt: Click \"Serve this model\" from the catalog explorer\n",
     ":width: 800px\n",
     ":align: center\n",
@@ -66,7 +66,7 @@
     "\n",
     "Once you've selected the options, click \"Create\".\n",
     "\n",
-    "```{image} ../images/playground/6_marketplace.png\n",
+    "```{image} ../images/serve_marketplace/6_marketplace.png\n",
     ":alt: Click \"Create\" to create the model serving endpoint after configuring the endpoint\n",
     ":width: 800px\n",
     ":align: center\n",
@@ -78,7 +78,7 @@
     "\n",
     "## See Also\n",
     "\n",
-    "The [MLflow Prompt Engineering UI](nbs:fm_api_mlflow_prompt_eng) is another useful tool for comparing models and prompts. The prompt engineering UI is particularly useful for configuring prompt templates and comparing different models and and inputs using those templates. The AI playground, on the other hand, is more centered around the chat interface and is great for comparing chat and instruction models on a variety of tasks."
+    "Some models are available instantly via Databricks Foundation Model API. [This notebook](nbs:fm_api_openai_sdk) shows how to get started with the Foundation Model API without needing to configure your own model serving endpoint.  "
    ]
   }
  ],
