updates openai example to use dbrx

--- a/genai_cookbook/nbs/fm_api_openai_sdk.ipynb
+++ b/genai_cookbook/nbs/fm_api_openai_sdk.ipynb
@@ -110,9 +110,9 @@
     }
    },
    "source": [
-    "## Chat Completions\n",
+    "## Chat Completions with DBRX\n",
     "\n",
-    "With these changes made, we can specify supported Foundation Model API models and call on them with the OpenAI client. Here, for example, we generate a chat completion with the `databricks-mixtral-8x7b-instruct` model."
+    "With these changes made, we can specify supported Foundation Model API models and call on them with the OpenAI client. Here, for example, we generate a chat completion with the `databricks-dbrx-instruct` model."
    ]
   },
   {
@@ -151,7 +151,7 @@
    ],
    "source": [
     "chat_completion = client.chat.completions.create(\n",
-    "    model=\"databricks-mixtral-8x7b-instruct\",\n",
+    "    model=\"databricks-dbrx-instruct\",\n",
     "    messages=[\n",
     "        {\n",
     "            \"role\": \"system\",\n",
